<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ModifierInfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/titre_modif_info"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/annulerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/prenomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_prenom"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/nomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_nom"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/adresseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_adresse"
                android:inputType="textPostalAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/villeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_ville"
                android:inputType="textPostalAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Spinner
                android:id="@+id/provinceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/array_provinces" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/codeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_code_postal"
                android:inputType="textPostalAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/annulerButton"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/btn_annuler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmerButton"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="17dp"
        android:text="@string/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/annulerButton"
        app:layout_constraintTop_toTopOf="@+id/annulerButton" />
</android.support.constraint.ConstraintLayout>