<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="0dp"
        android:paddingLeft="5dp">
        <!--android:background="#efefef"-->


        <TextView
            android:id="@+id/lineSectionNum"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="#"
            android:textColor="#006699"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/lineSectionName"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/str_titre"
            android:textColor="#006699"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/lineSectionPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/str_prix"
            android:textColor="#006699"
            android:textSize="18sp"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/lineSectionNbPlaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:text="@string/str_nb_place"
            android:textColor="#006699"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <!--<EditText-->
            <!--android:id="@+id/reserverEditTxtSection"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="0dp"-->
            <!--android:layout_marginRight="0dp"-->
            <!--android:layout_marginTop="0dp"-->
            <!--android:gravity="center_vertical"-->
            <!--android:hint="0"-->
            <!--android:inputType="number"-->
            <!--android:paddingLeft="5dp" />-->
    </LinearLayout>
</LinearLayout>
