<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/IIBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollIndicators="top|bottom"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="horizontal|vertical"
    app:layout_scrollFlags="scroll">

    <LinearLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/ficheTxtSepcTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center|start"
            android:text="Titre"
            android:textColor="#006699"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMainInfo"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutImage"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ficheImageView"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:background="@drawable/clef_100"
                android:contentDescription="TODO" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutInfos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/layoutInfos2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ficheLabelSpecDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ficheTxtSpecDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Date"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutInfos3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ficheLabelSpecGenre"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_genre"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ficheTxtGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Genre"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutInfos4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ficheLabelSpecSalle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_salle"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ficheTxtSalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Salle"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutInfos5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ficheLabelSpecDuree"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_duree"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ficheTxtDuree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Durée"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="0,1">

        <TextView
            android:id="@+id/ficheTxtArtisteTitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="Artistes"
            android:textColor="#006699"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/ficheTxtViewArtiste01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#696969"
                android:textSize="18sp"
                android:textStyle="italic"
                android:visibility="invisible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/ficheTxtViewArtiste02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#696969"
                android:textSize="18sp"
                android:textStyle="italic"
                android:visibility="invisible" />

        </TableRow>

        <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp">

        <TextView
        android:id="@+id/ficheTxtViewArtiste03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#696969"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="invisible" />
        </TableRow>

        <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:paddingLeft="10dp">-->

        <!--<TextView-->
        <!--android:id="@+id/ficheTxtViewArtiste04"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="#696969"-->
        <!--android:textSize="18sp"-->
        <!--android:textStyle="italic"-->
        <!--android:visibility="invisible" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:paddingLeft="10dp">-->

        <!--<TextView-->
        <!--android:id="@+id/ficheTxtViewArtiste05"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="#696969"-->
        <!--android:textSize="18sp"-->
        <!--android:textStyle="italic"-->
        <!--android:visibility="invisible" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:paddingLeft="10dp">-->

        <!--<TextView-->
        <!--android:id="@+id/ficheTxtViewArtiste06"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="#696969"-->
        <!--android:textSize="18sp"-->
        <!--android:textStyle="italic"-->
        <!--android:visibility="invisible" />-->

        <!--</TableRow>-->
    </TableLayout>

    <TextView
        android:id="@+id/ficheTxtLabelDescription"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:text="Description"
        android:textColor="#006699"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ficheTxtViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Description"
            android:textColor="#696969"
            android:textSize="18sp"
            android:textStyle="italic"
            android:visibility="visible" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btnReserver"
            style="@style/Spectacle.Bouton"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/btnReserver" />


    </LinearLayout>


</LinearLayout>